<resources>
    <string name="app_name">Shop</string>
    <string name="profit">Прибыль</string>
    <string name="income">Доход</string>
    <string name="expenses">Расходы</string>
    <string name="shopping_list">Список покупок</string>
    <string name="debtors">Задолжники</string>
    <string name="firms">Фирмы</string>
    <string name="add">Добавить</string>
    <string name="addFirm">Добавиление фирмы</string>
    <string name="title">Название фирмы</string>
    <string name="edit">Редактирование</string>
    <string name="totalResult">Всего оплачено, задолженно:&#160;</string>
    <string name="pay">Оплачено</string>
    <string name="debt">Долг</string>
    <string name="cashbox">Касса</string>

    <!--    Firm detail -->
    <string name="number">№</string>
    <string name="name">Название товара</string>
    <string name="count">Кол-во</string>
    <string name="price">Цена</string>
    <string name="discount">Скидка %</string>
    <string name="total_price">Общ. сумма</string>
    <string name="total">Итого:</string>
    <string name="payment">К оплате</string>
    <string name="paid_for">Оплачено</string>
    <string name="previous_debt">Пред. задолженность</string>
    <string name="total_debt">Общая задолженность</string>
    <string name="imageDesc">Изображения накладного</string>
    <string name="date">Дата</string>
    <string name="editDate">Изменить</string>
    <string name="create">Создать накладной</string>
    <string name="delete">Удалить</string>

    <!--    Sign in or Sign up-->

    <string name="sing_in">Вход</string>
    <string name="sing_up">Регистрация</string>
    <string name="singIn"><u>Войти?</u></string>
    <string name="singUp"><u>Зарегистрираваться?</u></string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="logout">Выйти</string>

    <!--    Debtors-->
    <string name="debtorsTitle">Задолжники</string>
    <string name="done">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="nameDebtor">Имя задолжника</string>
    <string name="paid">Оплачено</string>
    <string name="arrears">Задолженность</string>
    <string name="addDebtor">Добавить задолжника</string>
    <string name="totalDebt">Долгов всего:&#160;</string>

    <!--    Shopping list-->
    <string name="addProduct">Добавить товар</string>
    <string name="productName">Название товара</string>
    <string name="editProductName">Изменение имени товара</string>

<!--    Expenses-->
    <string name="totalExpenses">Всего расходов:&#160;</string>
    <string name="addExpense">Добавить расход</string>
    <string name="question">Это фирма?</string>
    <string name="expenseName">Названия расхода</string>
    <string name="sort">Сортировать</string>
    <string name="origin">От</string>
    <string name="destination">До</string>
    
<!--    Cash box -->
    <string name="cash">Наличные</string>
    <string name="card">Пластик</string>

</resources>